--- a/index.html
+++ b/index.html
@@ -5,22 +5,38 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Address book</title>
   </head>
-
   <body>
     <div class="container">
+      <h1>To Do List</h1>
 
-      <form id="sentence">
-        <h1>Repeated Word Fixer</h1>
-        <div class="form-group">
-          <label class = "bigtext" for="wordBox1"></label><br>
-          <input id="wordBox" type="text" placeholder= "type sentence here"></input>
+      <div class="row">
+        <div class="col-md-6">
+          <form id="toDo">
+            <div class="form-group">
+              <input type="text" class="form-control" id="task-to-add" placeholder="enter task here">
+            </div>
+            <div class="form-group">
+              <input type="date" class="form-control" id="date" placeholder="enter deadline here">
+            </div>
+            <button type="submit" class="btn">Add</button>
+          </form>
+
+          <h2>Tasks:</h2>
+          <ul id="taskList">
+
+          </ul>
         </div>
-        <button type="submit" id="btn">Click here!</button>
-      </form>
-      <div id="outputArea">  </div>
+      </div>
+      <div class="col-md-6">
+        <div id="show-tasks">
+          <h2>List</h2>
 
+          <p>ToDo: <span class="task"></span></p>
+
+        </div>
+      </div>
     </div>
   </body>
 </html>
