--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <div class="col-md-6">
           <form id="toDo">
             <div class="form-group">
+              <label for="task-to-add">Task</label>
               <input type="text" class="form-control" id="task-to-add" placeholder="enter task here">
             </div>
             <div class="form-group">
+              <label for="date">Deadline</label>
               <input type="date" class="form-control" id="date" placeholder="enter deadline here">
             </div>
             <button type="submit" class="btn">Add</button>
